hotfix/fix z-index

--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -29,7 +29,7 @@
   right: 120px;
   left: 120px;
   bottom: 0;
-  z-index: 2;
+  z-index: 3;
 }
 .header__logo {
   margin: 0;
